- Fixed a missing "  - Added that the nxtcamview software is used

--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -20,7 +20,7 @@ number of different sensors which can be classified as ``distance sensors'', we
 have chosen to use a standard NXT ultrasonic distance sensor. This was done due
 to the limited availability of sensors in stock, and the possiblity of waiting a
 long time for shipping new sensors. The contestants regarding the choice of
-camera was between a ``Microsoft Kinect'' and a NXTCam v4''. While the Kinect is
+camera was between a ``Microsoft Kinect'' and a ``NXTCam v4''. While the Kinect is
 vastly more powerful, it poses the problems of being a larger device which could
 not easily be placed on the turret, and it would need to be connected to a
 PC in order to translate its input into useful data. On the other hand the
