--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -10,9 +10,9 @@ target.
 For the purpose of identifying and tracking a target, the developed turret will
 make use of a specialized camera, which is capable of identifying coloured
 objects. In order to use the camera, the user specifies a colour of choice,
-which will then be searched for. When the camera registers an object of this
-colour, it will build a datalogical representation of the object consisting of a
-number of rectangles. Such a representation can be seen in
+which will then be searched for. The colours are set using a program called
+``NXTCamView'''. When the camera registers an object of this colour, it
+will build a datalogical representation of the object consisting of a number of rectangles. Such a representation can be seen in
 \autoref{TwoBlobs2.PNG}. 
 
 \figx[0.70]{TwoBlobs2.PNG}{Visual representation of what the camera senses.}
