--- a/sections/Requirements/Requirements.tex
+++ b/sections/Requirements/Requirements.tex
@@ -51,6 +51,12 @@ The following features and requirements where defined for the project:
   \end{itemize}
   \end{itemize}
   
+  Based on these requirements and the anylysis it is now possible to make design
+  choices about the construction of \namep, such that it is able to hit a
+  target in motion. It is also possible to contruct a target that \name is
+  able both detect and hit, based on the test of the camera and ultrasonic
+  sensor. 
+  
 %   \subsection{Need to have}
 % The following requirements have been deemed necessary for an autonomous turret:
 % \begin{itemize}
