--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -20,7 +20,8 @@
 \input{sections/Requirements/ProblemStatement.tex}
 \input{sections/Requirements/Requirements.tex}
 
-
+\part{Design}
+\input{sections/Design/TurretDesign.tex}
 \part{Testing}
 %Physics of shooting
 %Turret design choises
