Moved physics test to appendix Fixed and rewrote sentences in Platform Choice

--- a/sections/appAname.tex
+++ b/sections/appAname.tex
@@ -1,2 +1,3 @@
 \input{sections/Appendix/Physics/DistanceTest} 
 \input{sections/Appendix/Physics/DistanceData}
+\input{sections/Testing/Testing.tex}
