Worked on Problem Statement

--- a/sections/Requirements/ProblemStatement.tex
+++ b/sections/Requirements/ProblemStatement.tex
@@ -43,17 +43,16 @@ conclusions:
 \end{itemize}\nl
 
 
-Based on these observations and conclusions, we can establish the following
+Based on these conclusions, we can establish the following
 problem statement:
 
 \begin{center}
-\colorbox{diff}{
 \begin{minipage}{0.8\linewidth}
 \textit{How can an autonomous turret be constructed, designed and implemented
 such that it is capable of hitting a moving target.}
 \end{minipage}
-}
 \end{center}
+
 
 Based on this problem statement a number of refined requirements have been made.
 These can be found below in \autoref{FeatAndReq}. 
