--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -82,7 +82,7 @@ schedule for the system to follow, a scheduling analysis can be conducted in
 order to ensure that the schedule does in fact always hold true and no deadlines
 are missed \Source. Scheduling is one of the fundamental concepts of RTS, but
 for scheduling to work, knowledge is needed about how long tasks take to finish
-\Source.
+\Source.\nl
 
 % To ensure that the deadlines \textbf{always} are met, scheduling is needed.
 % By explicitly stating a schedule for the system to follow, a scheduling analysis
