Rettelser i intro samt physics theory

--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -104,7 +104,7 @@ the angle $\mathbf{a}$, the turrets height $\mathbf{h}$ and the length of the
 turret $\mathbf{r}$.
 
 \subsection{Angle-Distance Relation}
-When firing the turret has one primary variable it can use to aim,
+When firing, the turret has one primary variable it can use to aim,
 namely the angle at which the projectile is fired.
 
 % This variable is
