--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -5,13 +5,10 @@ like kitchen appliances and radiator thermostats. This entire class of minute
 computers surrounds us in much greater numbers than ever before, although their
 presence is not as noticeable as for example a PC. These computers are built
 into a large part of all electronic devices. This class of computer systems is
-also known as Embedded Systems.\nl
+also known as embedded systems.\nl
 
-In this project we will focus on Embedded systems and end up with a physical
-product which is controlled using an Embedded system. This presents some issues
-as there is a limited amount of memory and processing power. Therefore, this
-project will also be focused on optimizing the software. Furthermore this
-project will include aspects from machine intelligence and real time systems. 
+In this project we will focus on embedded systems and end up with a physical product, which qualifies as an embedded system. This presents some issues
+as there is a limited amount of memory and processing power. Therefore, this project will also be focused on optimizing the software for the platform. Furthermore this project will include aspects from machine intelligence and real time systems. 
 % The theme of this semester is Embedded systems. This means that the focus of
 % the project will be working with a set of constraints that must be balanced.
 % Furthermore the project should include techniques from the machine intelligence
