--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -59,7 +59,7 @@ how much time can be spent searching and waiting for the optimal shot.
 
 \subsection{Design Space}
 The design space of an intelligent agent can be considered a series of 8
-factors, which are used to give an estimation of the system \citep[Chap
+factors, which are used to give an estimation of the system \citep[Ch.
 1.5]{MIBook}. These factors are: modularity, representation scheme, planning
 horizon, uncertainty, preference, number of agents, learning and computational
 limits.
@@ -71,8 +71,8 @@ different levels, flat, modular and hierachical. Flat means that everything is
 contained within a single module. Modular means that the system can be divided
 into several modules that can be understood separately from the system.
 Hierachical means that the modules can recursively have additional modules
-inside them. \name as an autonomous turret needs to have several functions, for
-example it needs to be able to turn, aim and determine the position of a target.
+inside them \citep[Ch 1.5.1]{MIBook}. \name as an autonomous turret needs to
+have several functions, for example it needs to be able to turn, aim and determine the position of a target.
 This means that \name should be somewhat modular due to the fact that it has
 different tasks, that can each be considred modules of their own.
 
@@ -80,8 +80,8 @@ different tasks, that can each be considred modules of their own.
 As mentioned in \autoref{KR} the representation scheme is used to house the
 various knowledge the agent could need to perform. This knowledge is usually
 represented in terms of states. A state is a specific combination of
-the knowledge. For example a turret with the ability to turn 180 degrees and
-tilt its cannon 45 degrees would have $180 * 45$ states. As an example, a
+the knowledge \citep[Ch 1.5.2]{MIBook}. For example a turret with the ability
+to turn 180 degrees and tilt its cannon 45 degrees would have $180 * 45$ states. As an example, a
 specific state would have the turret turned 90 degrees and the cannon tilted at an angle of 42
 degrees. This leads to alot of different states as the amount of possible values
 increases. Instead of reasoning using states it is possible to combine the
@@ -94,7 +94,7 @@ The planning horizon of an intelligent agent is the time it considers the
 consequences of its actions. For example a child might only do something if
 there is an immediate reward, whereas an adult might have the foresight to do
 something for a reward thats some time off. There exist the following types of planning
-horizons:
+horizons \citep[Ch 1.5.3]{MIBook}:
 \begin{itemize}
 	\item \textbf{Non-planning} - The agent does not consider the future when
 	making decisions, or time is not involved as a factor.
@@ -114,7 +114,7 @@ would fire when it sees a target.
 There are two parts to uncertainty. The first part is sensing uncertainty while
 the second is effect uncertainty. Sensing uncertainty concerns what the agent
 can determine based on its observations. There are two possibilities concerning
-what it can sense:
+what it can sense \citep[Ch. 1.5.4]{MIBook}:
 \begin{itemize}
   \item \textbf{Fully observable} - The agent can determine the current state
   based on observations.
@@ -130,7 +130,8 @@ the sensors may provide noisy observations. We can thus already determine that
 \name will only be able to partially observe the state.\nl
 
 Effect uncertainty concerns how accurately the agent can determine the resulting
-state based on an action in its current state. There are two possibilities:
+state based on an action in its current state. There are two possibilities
+\citep[Ch. 1.5.4]{MIBook}:
 \begin{itemize}
   \item \textbf{Deterministic} - The resulting state can be determined based on
   an action and the current state.
@@ -145,7 +146,8 @@ resorting to probability.
 \subsubsection{Preferences}
 For an agent to be able to make good decisions it is necessary to provide an
 idea of the goals we are trying to accomplish. Furthermore there are certain
-preferences concerning the trade-off between different solutions.
+preferences concerning the trade-off between different solutions \citep[Ch.
+1.5.5]{MIBook}.
 
 \begin{itemize}
   \item \textbf{Goals} - There are two types of goals, achievement goals and
@@ -164,7 +166,8 @@ that allows us to hit a target in motion.
 
 \subsubsection{Number of Agents}
 Depending on what an agent needs to accomplish, it might need to take the
-reasoning of other agents into account. This leads to two types of reasoning:
+reasoning of other agents into account. This leads to two types of reasoning
+\citep[Ch. 1.5.6]{MIBook}:
 \begin{itemize}
   \item \textbf{Single agent reasoning} - The agent does not take other
   agents into account and assumes they are part of the environment.
@@ -185,7 +188,7 @@ consideration in order to actually hit it.
 \subsubsection{Learning}
 
 There are two ways of handling knowledge: Either knowledge is given or
-it is learned. 
+it is learned \citep[Ch. 1.5.7]{MIBook}. 
 \begin{itemize}
   \item \textbf{Knowledge is given} - The agent possesses a model which the
 designer thinks is suitable for the task.
@@ -211,7 +214,7 @@ An angent may not always be able to compute the best action to a problem fast
 enough, which could be due to memory limitation or just the sheer size of the
 problem. This means that the agent may need to trade off the time it needs to
 compute a solution with how good the solution is. This limit determines whether
-the agent has:
+the agent has \citep[Ch. 1.5.8]{MIBook}:
 
 \begin{itemize}
   \item Perfect rationality - The agent tries to find the best action without
@@ -244,7 +247,8 @@ probabilities must be specified:
 These kinds of chains are of interrest due to the fact that the stationary
 assumption is a natural model because the dynamics of the world ussually does
 not change. The network can also extend indefinetly which means that with a
-small number of parameters the network can be infinite.\nl
+small number of parameters the network can be infinite \citep[Ch.
+6.5.1]{MIBook}.\nl
 
 The Markov chain can be augmented to include observations which makes it a
 Hidden Markov model. Like the state transitions from a Markov chain the Hidden
@@ -253,7 +257,7 @@ maps to the same observation it is partial and if the same state maps to
 different observations at different times it is noisy. The observations are
 modeled using $O_t$ for each time t whose domain is the set of possible
 observations. A Hidden Markov model needs three conditional proballity
-distributions
+distributions \citep[6.5.2]{MIBook}
 \begin{itemize}
   \item $P(S_0)$ - species the initial condition
   \item $P(S_{t+1}|S_t)$ - specifies the dynamics, which is the same for each $t
