- Made the pictures require less space such that LaTex runs faster  - Added a "what is that" fix to projectile motion

--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -48,7 +48,7 @@ the resulting formula:
 \begin{equation}\label{Eq1}
 0=y_0+v_0*t*sin(a)-\frac{1}{2}*g*t^2
 \end{equation}
-The p
+\fix{The p}{what??}
 \figx[0.2]{DistRepresent}{Projectile trajectory on the x- and y-axis.}
 Now we can isolate for $\mathbf{t}$ in \autoref{Eq1}. Using the quadratic
 formula gives two results, but assuming a positive value for $\mathbf{a}$ we get
@@ -75,8 +75,8 @@ Another important point is that the variables $\mathbf{y_0}$ and $\mathbf{x_0}$
 changes dynamically based on angle of the turret. This is because the muzzle of
 the turret changes its vertical and horizontal position based on the angle. This
 can be seen in \autoref{FinalPhysTurret}.
-\figx[0.18]{FinalPhysTurret}{Turret marked with the variables a, r, h, $x_0$ and
-$y_0$}
+\figx[0.18]{FinalPhysTurret}{Turret marked with the variables a, r, h, $x_0$
+and $y_0$}
 
 In order to calculate $y_0$ for any given angle we can make use of the sine for
 the angle. Looking at \autoref{FinalPhysTurret} we can formulate the following
