--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -228,7 +228,7 @@ unlimited resources or time. This means that in some situations, like deciding
 when to shoot, it will have to determine the best course of action at the
 moment instead of spending a lot of time computing the best solution.
 
-\subsubsection{Belief Network}
+\subsection{Belief Network}
 A belief network is an acyclic directed graph consisting of random variables and
 a set of conditional probalility distributions. This an be used to model a
 dynamic system by treating a feature at a given time as a random variable, which
