- Added a fix to the start to talk about the problems of RTS

--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -1,6 +1,10 @@
 \section{Real-Time Systems}
-Although the project group does not have any members following the Real-Time
-Systems (RTS) course, the project still incorporates certain elements from RTS.
+\fix{Der er måske ikke brug for denne section i rapporten, begrundelse af at
+ingen er os har RTS og det bliver ikke brugt til noget i rapporten ud over at
+bruge masser af tid på at omskrive og lede efter kilder for at få det til at
+komme ind i rapporten} 
+Although the project group does not have any members
+following the Real-Time Systems (RTS) course, the project still incorporates certain elements from RTS.
 As such, this section will provide a quick overview of the elements which will
 be used in relation to the project.
 In order to have a proper foundation for the core concepts in the field of
