Add simple MI requirement

--- a/sections/Requirements/Requirements.tex
+++ b/sections/Requirements/Requirements.tex
@@ -12,6 +12,7 @@ The following features and requirements where defined for the project:
     \item The system needs to use the Lego NXT as the embedded
     system. This platform is chosen based on the findings in
     \autoref{PlatformC}. 
+    \item The system must be an intelligent agent.
   \end{itemize}
   \item The Turret needs to be able to hit a moving target. This leads to the
   following requirements:
@@ -47,7 +48,7 @@ The following features and requirements where defined for the project:
     a high accuracy. It is not enough to hit the target sometimes, the turret
     should be able to hit it reliably. It should be able to hit a moving target
     at least 80\% of the time.
-  
+
   \end{itemize}
   \end{itemize}
 
