--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -8,9 +8,37 @@ includes the mechanism for shooting, the design of the base, sensor placement
 and the mechanism for rotating.
 
 \subsection{Shooting Mechanism}
+When it comes to the shooting mechanism it needs to be able to shoot at least
+200 cm as this is one of the requirements. This means that it a significant
+amount of power behind each shot. To make this a reality some different designs
+were considered. the first design considered was a balista due to the fact that
+a balista is able to deliver a lot of power. This design was quickly dismissed
+due to the fact that it is hard to make it able to reload itself, which would
+mean that it would only be able to fire a single shot. This was deemed as a
+major flaw since if it missed it would not be able to try again. Another design
+considered utilizes the same principle as a football launcher, where two wheels
+are spinning in opposite directions. This design was not realised due to the
+fact that we did not have acces to motors powerfull enough to deliver the
+necessary power for the mechanism to have momentum enough to shoot. The final
+design considered uses a piston that pushes the projectile trough a mouth piece
+that clamps around it to apply force to the projectile. This design is the
+design we went with due to the fact that it has a sufficient amount of power and
+it is easily reloadable.\nl
+
+The shooting mechanism is mounted on a mechanism that is used to angle the
+shooting mechanism to make it able to shoot a target at varying distances. This
+mechanism works by having a high gearing on a motor and connecting the platform
+that the shooting mechanism is mounted on to the big gear. This makes the
+platform rise when the motor turns.
+
 \subsection{Design of the base}
+
 \subsection{Sensor Placement}
+
 \subsection{Rotating Mechanism}
+motor beside the turret with gearing
+mortor connected directly to rotator
+motor placed on turret with gearing
 
 \section{Target Design}
 
