--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -11,7 +11,7 @@ and the mechanism for rotating.
 When it comes to the shooting mechanism it needs to be able to shoot at least
 200 cm as this is one of the requirements. This means that it a significant
 amount of power behind each shot. To make this a reality some different designs
-were considered. the first design considered was a balista due to the fact that
+were considered. The first design considered was a balista due to the fact that
 a balista is able to deliver a lot of power. This design was quickly dismissed
 due to the fact that it is hard to make it able to reload itself, which would
 mean that it would only be able to fire a single shot. This was deemed as a
@@ -32,13 +32,29 @@ that the shooting mechanism is mounted on to the big gear. This makes the
 platform rise when the motor turns.
 
 \subsection{Design of the base}
+The base of the turret is a frame where the nxt is mounted and the shooting and
+angleing mechanism mounted on top. Two designs were considered for the frame,
+one where the NXT is mounted upright on the side of the base and one where the
+NXT is laying flat on the back inside the base. In the design where the NXT was
+upright the screen and the buttons on the front was accessible, but all the I/O
+ports on the end was hard to get to. This design was not chosen mostly because
+of the height but also because it was hard to charge the NXT. The height is a
+factor due to the fact that the higher the turret gets the more unstaple it
+becomes. This design also placed a lot of the weight on one side of turret
+which med it more unstable.\nl
 
+In the chosen design where the NXT is laying on the back inside the turret the
+I/O ports are fully accessible. This design also makes the turret a lot lower and
+distributes the weight which makes the turret more stable. 
 \subsection{Sensor Placement}
-
+one ultrasonic sensor?
+on the front of the turret
 \subsection{Rotating Mechanism}
 motor beside the turret with gearing
 mortor connected directly to rotator
 motor placed on turret with gearing
 
 \section{Target Design}
+round target?
+flat target
 
