--- a/sections/Analyse/SystemDescription/Conclusion.tex
+++ b/sections/Analyse/SystemDescription/Conclusion.tex
@@ -4,19 +4,18 @@ Throughout this chapter the basic concepts of each aspect of the system have
 been explained. As such, this section will be used to conclude on how these
 different aspects can be used in relation to the \name system.
 
-% Now hat the basic concepts of each aspect of the system have been explained,
-% a summary will now be concluded in relation to the project.
 \begin{itemize}
   \item The constraints for this semester requires the developed product to be
-  an embedded system, which implies that we need to take into consideration
-  the hardware contraints imposed by the used platform. This requirement is
-  fulfilled by using a hardware platform such as Arduino or Lego NXT, since the
-  platforms are restricted on the basis of computing power, size and memory.
-  \item In order for the system to behave intelligently it needs a model with
-  with the ability to store enough knowledge to solve the problem. The design of
-  the agent can be divided into 8 categories, which affect the overall purpose
-  of the system. Finally the system makes use of a hidden markov model in order
-  to predict the future based on observations.
+  an embedded system, which implies that we need to take the hardware
+  constraints into consideration and design it for this specific task. This
+  requirement is fulfilled by using a hardware platform such as Arduino or Lego
+  NXT, since the platforms are restricted on the basis of computing power, size
+  and memory.
+  \item Since it needs to be an intelligent agent, it needs to have a model
+  which can be used to solve the problem. Since the agent can only partially
+  observe the state it must be able to reason under uncertainty. To do this the
+  agent can use a belief network to try and predict the future based on
+  observations.
   \item The four different elements of real-time systems can be used to form a
   basis for consideration when developing the system. In relation to this
   project it will be especially important to consider how timeliness and
@@ -25,7 +24,7 @@ different aspects can be used in relation to the \name system.
   moving target.
 \end{itemize}  
 
-With the system analysed, it is now possible to analyse how we can ensure that
+With the system analysed, it is now possible to determine how we ensure that
 the turret will actually hit the target.
 
 
