--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -48,7 +48,7 @@ the resulting formula:
 \begin{equation}\label{Eq1}
 0=y_0+v_0*t*sin(a)-\frac{1}{2}*g*t^2
 \end{equation}
-\fix{The p}{what??}
+
 \figx[0.2]{DistRepresent}{Projectile trajectory on the x- and y-axis.}
 Now we can isolate for $\mathbf{t}$ in \autoref{Eq1}. Using the quadratic
 formula gives two results, but assuming a positive value for $\mathbf{a}$ we get
@@ -83,7 +83,7 @@ the angle. Looking at \autoref{FinalPhysTurret} we can formulate the following
 formula:
 \begin{equation}\label{Y0Eq}
 y_0\ =\ h\ +\ r\ *\ sin(a)
-\end{equation}\nl
+\end{equation}
 
 In order to calculate $x_0$ we can use the cosine for the angle to determine the
 distance. We can formulate the following formula:
