--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -10,7 +10,7 @@ and the mechanism for rotating.
 \subsection{Shooting Mechanism}
 When it comes to the shooting mechanism it needs to be able to shoot at least
 200 cm as this is one of the requirements. This means that it a significant
-amount of power behind each shot. To make this a reality some different designs
+amount of power behind each shot. To make this a reality three different designs
 were considered. The first design considered was a balista due to the fact that
 a balista is able to deliver a lot of power. This design was quickly dismissed
 due to the fact that it is hard to make it able to reload itself, which would
@@ -50,6 +50,14 @@ distributes the weight which makes the turret more stable.
 one ultrasonic sensor?
 on the front of the turret
 \subsection{Rotating Mechanism}
+The turret needs to be able to rotate in order to be able to track a moving
+target. For this purpose three design were considered. In the first design a
+motor was placed beside the turret. This motor was connected to a stick with a
+spiral gear that was conected to a gear on the bottom of the base. This design
+made the turning of the turret precise in the sense that the turret was not
+prone to over turning when stopping the motor. 
+
+
 motor beside the turret with gearing
 mortor connected directly to rotator
 motor placed on turret with gearing
