- Added a fix to RTS

--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -20,8 +20,9 @@ its deadlines.}
 \end{center}
 
 For this project we consider a real-time system to be categorized by looking at
-four different elements: timeliness, deadlines, tasks and scheduling. As such,
-these will be further explained throughout this section.
+four different elements: \fix{timeliness, deadlines, tasks and
+scheduling.}{where does these come from} As such, these will be further
+explained throughout this section.
 
 \subsection{Timeliness}
 % Timeliness is defined as being a function of the total system, for example a
