- Added \source to PlatformChoice, which was there before, why remove it?

--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -70,7 +70,7 @@ construction of diverse and complex systems \citep{ArduinoComponents}. For the
 sake of comparison we will use the Arduino Uno, since this is the board being
 offered by the university.\nl
 
-The Arduino Uno consists of:
+The Arduino Uno consists of \Source:
 
 \begin{itemize}
   \item ATmega328P processor 16 MHz clockfrequency
