Tried to make a new problem statement

--- a/sections/Requirements/ProblemStatement.tex
+++ b/sections/Requirements/ProblemStatement.tex
@@ -39,7 +39,9 @@ problem statement:
 \begin{center}
 \begin{minipage}{0.8\linewidth}
 \textit{How can an autonomous turret be constructed, designed and implemented
-such that it is capable of hitting a moving target.}
+using the NXT a camera and a pair of ultrasonic distance sensors. Furthermore,
+how can a belief network be constructed and used for predicting the placement
+of the target.}
 \end{minipage}
 \end{center}
 
