--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -47,6 +47,15 @@ In the chosen design where the NXT is laying on the back inside the turret the
 I/O ports are fully accessible. This design also makes the turret a lot lower and
 distributes the weight which makes the turret more stable. 
 \subsection{Sensor Placement}
+The sensor are a vital part of the turret and need to placed in such a way that
+the results from the sensors are as good as possible. As the tests described in
+\autoref{UltraTestPlacement} states, it is important that the sensor is not
+placed to close to the ground due to the fact that it interferes with the
+soundwaves.\nl
+
+
+
+
 one ultrasonic sensor?
 on the front of the turret
 \subsection{Rotating Mechanism}
@@ -55,12 +64,25 @@ target. For this purpose three design were considered. In the first design a
 motor was placed beside the turret. This motor was connected to a stick with a
 spiral gear that was conected to a gear on the bottom of the base. This design
 made the turning of the turret precise in the sense that the turret was not
-prone to over turning when stopping the motor. 
+prone to over turning when stopping the motor. The problem with this design is
+that it limits how much The turret can turn, due to the fact that the cable
+connecting the motor to the NXT has to either go on the outside of the turret,
+which makes it wrap around and in turn stop the turret from turning, or go on
+the inside which makes the cable twist, which also makes the turret stop
+turning, although it can turn more than with the cable on the outside.\nl
 
+Another design considered was where the motor was placed inside the base of the
+turret and connected directly to the gear that makes the turret turn. This
+design does not have the problem of the cable limiting how much the turret can
+turn, since the motor is located on the the turret and therefore turns with the
+NXT. This design does have a flaw, that is that it overturn whenever it needs to
+stop. This means that the turret is not very precise which makes it difficult to
+hit a target.\nl
 
-motor beside the turret with gearing
-mortor connected directly to rotator
-motor placed on turret with gearing
+The chosen design is similar to the design with the turret directly connected to
+the gear that turns the turret, the difference being that the motor is placed on
+the outside of the base and the motor is geared which makes it more precise when
+stopping since it does not over turn as much as the design whitout a gear. 
 
 \section{Target Design}
 round target?
